deployment.yaml
---
# Inspiration from Kelsey Hightower hello world
# See https://github.com/kelseyhightower/kubernetes-initializer-tutorial/blob/master/deployments/helloworld.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  labels:
    app: gopdf
  name: gopdf
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: gopdf
      name: gopdf
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: gopdf
        image: repository.hybris.com:5005/upsurge/gopdf:v8
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
      imagePullSecrets:
        - name: "hybris-artifactory"

---
kind: Service
apiVersion: v1
metadata:
  name: gopdf
spec:
  selector:
    app: gopdf
  ports:
  - protocol: TCP
    port: 8080
