ingress.yaml

# See https://cert-manager.readthedocs.io/en/latest/reference/ingress-shim.html
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    # add an annotation indicating the issuer to use.
    certmanager.k8s.io/cluster-issuer: letsencrypt-staging
  name: helloworld
  namespace: default
spec:
  rules:
  - host: helloworld.kubecon2018.jonathanhess.com
    http:
      paths:
      - backend:
          serviceName: helloworldservice
          servicePort: 80
        path: /
  tls: # < placing a host in the TLS config will indicate a cert should be created
  - hosts:
    - helloworld.kubecon2018.jonathanhess.com
    secretName: helloworld-cert # < cert-manager will store the created certificate in this secret.
